--- a/final-test/final-test-web/src/main/resources/messages.properties
+++ b/final-test/final-test-web/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
-org.finalframework.data.entity.enums.YN.1=有效
-org.finalframework.data.entity.enums.YN.0=无效
+org.finalframework.data.entity.enums.YN.yes=有效
+org.finalframework.data.entity.enums.YN.no=无效
