--- a/docs/pages/_documents/version/snapshot/0.5.2.md
+++ b/docs/pages/_documents/version/snapshot/0.5.2.md
@@ -17,7 +17,7 @@ version: 1.0
 
 ## 国际化扩展
 
-1. [Result](../../data/result.md) 添加国际化属性地区`locale` 和时区`timezone`。
+1. [Result](../../data/result.md) 添加国际化属性地区`locale` 和时区`timeZone`。
 2. [Result](../../data/result.md) 添加操作人属性`operator`。
 3. [IEnum](../../data/enum.md) 枚举类国际化支持。
 
