[U] add enum api controller

--- a/final-test/final-test-web/src/main/resources/messages_zh_HK.properties
+++ b/final-test/final-test-web/src/main/resources/messages_zh_HK.properties
@@ -1,2 +1,2 @@
-org.finalframework.data.entity.enums.YN.1=YES
-org.finalframework.data.entity.enums.YN.0=NO
+org.finalframework.data.entity.enums.YN.yes=YES
+org.finalframework.data.entity.enums.YN.no=NO
