--- a/docs/_data/i18n/zh/modules.yml
+++ b/docs/_data/i18n/zh/modules.yml
@@ -1,8 +1,8 @@
 - id: docs
   name: Docs
   logo: /assets/images/logos/github.svg
-  link: /docs/zh/overview
+  link: /docs/zh/index
 - id: spring
   logo: /assets/images/logos/spring.svg
   name: Spring
-  link: /spring/zh/overview
+  link: /spring/zh/index
