--- a/docs/_data/i18n/zh/sidebar/spring.yml
+++ b/docs/_data/i18n/zh/sidebar/spring.yml
@@ -10,12 +10,14 @@ menus:
     menus:
       - id: hello-world
         name: 你好，世界
+  - id: application
+    icon: apps
+    name: Application
+    menus:
       - id: spring-application
         name: SpringApplication
-  #  - id: annotations
-  #    icon: widgets
-  #    name: Annotation
-  #    menus:
+      - id: spring-application-run-listener
+        name: SpringApplicationRunListener
   - id: ioc
     icon: emoji_objects
     name: IOC
