--- a/docs/_data/i18n/zh/sidebar/spring.yml
+++ b/docs/_data/i18n/zh/sidebar/spring.yml
@@ -18,6 +18,12 @@ menus:
         name: SpringApplication
       - id: spring-application-run-listener
         name: SpringApplicationRunListener
+  - id: annotations
+    icon: widgets
+    name: Annotaions
+    menus:
+      - id: event-listener
+        name: EventListener
   - id: ioc
     icon: emoji_objects
     name: IOC
